--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,21 @@
 @tailwind utilities;
  
 @layer base {
+  .grid-teams {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .team-buttons {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+  }
+
+  .popup {}
+
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
